# Life-Hack-App

./: .gitignore  APP_STORE_LISTING.md  BRAND.md  CLAUDE.md  CLAUDE_CODE_BRIEF.md  DEPLOY.md  IOS_BUILD.md  PLAID_APPLICATION.md  PLAN.md  PRIVACY.md  README.md  RELEASES.md  REVIEW.md  SECURITY.md  SUPPORT.md  TERMS.md  capacitor.config.json  index.html  manifest.json  marketing.html  privacy.html  pyproject.toml  requirements.txt  robots.txt  security.html  sitemap.xml  support.html  sw.js  terms.html  vercel.json
.well-known/: security.txt
api/: AI_PROXY_SETUP.md  index.py
backend/: AUDIT.md  deploy.mjs  package-lock.json  package.json  vapid.mjs  worker.js  wrangler.toml
docs/: APP_STORE_PRIVACY.md  IOS_LAUNCH.md
marketing/: APPSTORE_COPY.md  README.md  index.html
screenshots/: README.md
screenshots/appstore/: README.md
stockanalyzer/: .gitignore  StockAnalyzer.command  analyzer.py  app.py  housing.py  mortgages.py  news.py  requirements.txt  stockcheck  universe.py
stockanalyzer/housing_data/: metro.csv  mortgage_15y.csv  mortgage_30y.csv  national.csv
stockanalyzer/static/: app.js  style.css
stockanalyzer/templates/: index.html
