[project]
name = "app"
version = "0.1.0"
dependencies = [ "flask==3.1.3", "numpy==2.0.2", "pandas==2.3.3", "yfinance==1.2.0", "requests==2.32.5", "beautifulsoup4==4.14.3", "python-dateutil==2.9.0.post0", "pytz==2026.2", "defusedxml==0.7.1" ]
# Vercel pins via runtime.txt (currently python-3.12); kept compatible here.
requires-python = ">=3.12"
